db/scs/parser/scsParser.py
# Generated from scs/scs.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class scsParser ( Parser ):

    grammarFileName = "scs.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';;'", "'sc_node'", "'sc_link'", "'sc_arc_common'", 
                     "'sc_edge'", "'sc_arc_main'", "'sc_arc_access'", "'#'", 
                     "'('", "')'", "'{'", "';'", "'}'", "'(*'", "'*)'", 
                     "'|'", "'<>'", "'>'", "'<'", "'..>'", "'<..'", "'->'", 
                     "'<-'", "'<=>'", "'=>'", "'<='", "'-|>'", "'<|-'", 
                     "'-/>'", "'</-'", "'~>'", "'<~'", "'~|>'", "'<|~'", 
                     "'~/>'", "'</~'", "'_<>'", "'_>'", "'_<'", "'_..>'", 
                     "'_<..'", "'_->'", "'_<-'", "'_<=>'", "'_=>'", "'_<='", 
                     "'_-|>'", "'_<|-'", "'_-/>'", "'_</-'", "'_~>'", "'_<~'", 
                     "'_~|>'", "'_<|~'", "'_~/>'", "'_</~'", "'_'", "'['", 
                     "']'", "'\"'", "'\\\"'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "ID_SYSTEM", "EDGE_ATTR", 
                      "COMMENT", "WS" ]

    RULE_syntax = 0
    RULE_sentence = 1
    RULE_idtf_lvl1_preffix = 2
    RULE_idtf_lvl1 = 3
    RULE_idtf_system = 4
    RULE_idtf_edge = 5
    RULE_idtf_set = 6
    RULE_idtf_common = 7
    RULE_idtf_list = 8
    RULE_internal_sentence = 9
    RULE_internal_sentence_list = 10
    RULE_sentence_lvl1 = 11
    RULE_sentence_lvl_4_list = 12
    RULE_sentence_lvl_common = 13
    RULE_attr_list = 14
    RULE_connector = 15
    RULE_content = 16
    RULE_link = 17

    ruleNames =  [ "syntax", "sentence", "idtf_lvl1_preffix", "idtf_lvl1", 
                   "idtf_system", "idtf_edge", "idtf_set", "idtf_common", 
                   "idtf_list", "internal_sentence", "internal_sentence_list", 
                   "sentence_lvl1", "sentence_lvl_4_list", "sentence_lvl_common", 
                   "attr_list", "connector", "content", "link" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    T__39=40
    T__40=41
    T__41=42
    T__42=43
    T__43=44
    T__44=45
    T__45=46
    T__46=47
    T__47=48
    T__48=49
    T__49=50
    T__50=51
    T__51=52
    T__52=53
    T__53=54
    T__54=55
    T__55=56
    T__56=57
    T__57=58
    T__58=59
    T__59=60
    T__60=61
    ID_SYSTEM=62
    EDGE_ATTR=63
    COMMENT=64
    WS=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SyntaxContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(scsParser.EOF, 0)

        def sentence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.SentenceContext)
            else:
                return self.getTypedRuleContext(scsParser.SentenceContext,i)


        def getRuleIndex(self):
            return scsParser.RULE_syntax




    def syntax(self):

        localctx = scsParser.SyntaxContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_syntax)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << scsParser.T__1) | (1 << scsParser.T__2) | (1 << scsParser.T__3) | (1 << scsParser.T__4) | (1 << scsParser.T__5) | (1 << scsParser.T__6) | (1 << scsParser.T__8) | (1 << scsParser.T__10) | (1 << scsParser.T__56) | (1 << scsParser.T__57) | (1 << scsParser.T__59) | (1 << scsParser.ID_SYSTEM))) != 0):
                self.state = 36
                self.sentence()
                self.state = 37
                self.match(scsParser.T__0)
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(scsParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class SentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def sentence_lvl1(self):
            return self.getTypedRuleContext(scsParser.Sentence_lvl1Context,0)


        def sentence_lvl_common(self):
            return self.getTypedRuleContext(scsParser.Sentence_lvl_commonContext,0)


        def getRuleIndex(self):
            return scsParser.RULE_sentence




    def sentence(self):

        localctx = scsParser.SentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_sentence)
        try:
            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.sentence_lvl1()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.sentence_lvl_common()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idtf_lvl1_preffixContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.text = None


        def getRuleIndex(self):
            return scsParser.RULE_idtf_lvl1_preffix




    def idtf_lvl1_preffix(self):

        localctx = scsParser.Idtf_lvl1_preffixContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_idtf_lvl1_preffix)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << scsParser.T__1) | (1 << scsParser.T__2) | (1 << scsParser.T__3) | (1 << scsParser.T__4) | (1 << scsParser.T__5) | (1 << scsParser.T__6))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idtf_lvl1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_SYSTEM(self):
            return self.getToken(scsParser.ID_SYSTEM, 0)

        def idtf_lvl1_preffix(self):
            return self.getTypedRuleContext(scsParser.Idtf_lvl1_preffixContext,0)


        def getRuleIndex(self):
            return scsParser.RULE_idtf_lvl1




    def idtf_lvl1(self):

        localctx = scsParser.Idtf_lvl1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_idtf_lvl1)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << scsParser.T__1) | (1 << scsParser.T__2) | (1 << scsParser.T__3) | (1 << scsParser.T__4) | (1 << scsParser.T__5) | (1 << scsParser.T__6))) != 0):
                self.state = 52
                self.idtf_lvl1_preffix()
                self.state = 53
                self.match(scsParser.T__7)


            self.state = 57
            self.match(scsParser.ID_SYSTEM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idtf_systemContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_SYSTEM(self):
            return self.getToken(scsParser.ID_SYSTEM, 0)

        def getRuleIndex(self):
            return scsParser.RULE_idtf_system




    def idtf_system(self):

        localctx = scsParser.Idtf_systemContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_idtf_system)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 59
            self.match(scsParser.ID_SYSTEM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idtf_edgeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idtf_system(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Idtf_systemContext)
            else:
                return self.getTypedRuleContext(scsParser.Idtf_systemContext,i)


        def connector(self):
            return self.getTypedRuleContext(scsParser.ConnectorContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(scsParser.Attr_listContext,0)


        def getRuleIndex(self):
            return scsParser.RULE_idtf_edge




    def idtf_edge(self):

        localctx = scsParser.Idtf_edgeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_idtf_edge)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.match(scsParser.T__8)
            self.state = 62
            self.idtf_system()
            self.state = 63
            self.connector()
            self.state = 65
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 64
                self.attr_list()


            self.state = 67
            self.idtf_system()
            self.state = 68
            self.match(scsParser.T__9)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idtf_setContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idtf_common(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Idtf_commonContext)
            else:
                return self.getTypedRuleContext(scsParser.Idtf_commonContext,i)


        def attr_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Attr_listContext)
            else:
                return self.getTypedRuleContext(scsParser.Attr_listContext,i)


        def getRuleIndex(self):
            return scsParser.RULE_idtf_set




    def idtf_set(self):

        localctx = scsParser.Idtf_setContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_idtf_set)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 70
            self.match(scsParser.T__10)
            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.state = 71
                self.attr_list()


            self.state = 74
            self.idtf_common()
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==scsParser.T__11:
                self.state = 75
                self.match(scsParser.T__11)
                self.state = 77
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
                if la_ == 1:
                    self.state = 76
                    self.attr_list()


                self.state = 79
                self.idtf_common()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(scsParser.T__12)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idtf_commonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idtf_system(self):
            return self.getTypedRuleContext(scsParser.Idtf_systemContext,0)


        def idtf_edge(self):
            return self.getTypedRuleContext(scsParser.Idtf_edgeContext,0)


        def idtf_set(self):
            return self.getTypedRuleContext(scsParser.Idtf_setContext,0)


        def content(self):
            return self.getTypedRuleContext(scsParser.ContentContext,0)


        def link(self):
            return self.getTypedRuleContext(scsParser.LinkContext,0)


        def getRuleIndex(self):
            return scsParser.RULE_idtf_common




    def idtf_common(self):

        localctx = scsParser.Idtf_commonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_idtf_common)
        try:
            self.state = 92
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [scsParser.ID_SYSTEM]:
                self.enterOuterAlt(localctx, 1)
                self.state = 87
                self.idtf_system()
                pass
            elif token in [scsParser.T__8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 88
                self.idtf_edge()
                pass
            elif token in [scsParser.T__10]:
                self.enterOuterAlt(localctx, 3)
                self.state = 89
                self.idtf_set()
                pass
            elif token in [scsParser.T__56, scsParser.T__57]:
                self.enterOuterAlt(localctx, 4)
                self.state = 90
                self.content()
                pass
            elif token in [scsParser.T__59]:
                self.enterOuterAlt(localctx, 5)
                self.state = 91
                self.link()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Idtf_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idtf_common(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Idtf_commonContext)
            else:
                return self.getTypedRuleContext(scsParser.Idtf_commonContext,i)


        def internal_sentence_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Internal_sentence_listContext)
            else:
                return self.getTypedRuleContext(scsParser.Internal_sentence_listContext,i)


        def getRuleIndex(self):
            return scsParser.RULE_idtf_list




    def idtf_list(self):

        localctx = scsParser.Idtf_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_idtf_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.idtf_common()
            self.state = 96
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==scsParser.T__13:
                self.state = 95
                self.internal_sentence_list()


            self.state = 105
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 98
                    self.match(scsParser.T__11)
                    self.state = 99
                    self.idtf_common()
                    self.state = 101
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==scsParser.T__13:
                        self.state = 100
                        self.internal_sentence_list()

             
                self.state = 107
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Internal_sentenceContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def connector(self):
            return self.getTypedRuleContext(scsParser.ConnectorContext,0)


        def idtf_list(self):
            return self.getTypedRuleContext(scsParser.Idtf_listContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(scsParser.Attr_listContext,0)


        def getRuleIndex(self):
            return scsParser.RULE_internal_sentence




    def internal_sentence(self):

        localctx = scsParser.Internal_sentenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_internal_sentence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            self.connector()
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 109
                self.attr_list()


            self.state = 112
            self.idtf_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Internal_sentence_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def internal_sentence(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Internal_sentenceContext)
            else:
                return self.getTypedRuleContext(scsParser.Internal_sentenceContext,i)


        def getRuleIndex(self):
            return scsParser.RULE_internal_sentence_list




    def internal_sentence_list(self):

        localctx = scsParser.Internal_sentence_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_internal_sentence_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(scsParser.T__13)
            self.state = 118 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 115
                self.internal_sentence()
                self.state = 116
                self.match(scsParser.T__0)
                self.state = 120 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << scsParser.T__16) | (1 << scsParser.T__17) | (1 << scsParser.T__18) | (1 << scsParser.T__19) | (1 << scsParser.T__20) | (1 << scsParser.T__21) | (1 << scsParser.T__22) | (1 << scsParser.T__23) | (1 << scsParser.T__24) | (1 << scsParser.T__25) | (1 << scsParser.T__26) | (1 << scsParser.T__27) | (1 << scsParser.T__28) | (1 << scsParser.T__29) | (1 << scsParser.T__30) | (1 << scsParser.T__31) | (1 << scsParser.T__32) | (1 << scsParser.T__33) | (1 << scsParser.T__34) | (1 << scsParser.T__35) | (1 << scsParser.T__36) | (1 << scsParser.T__37) | (1 << scsParser.T__38) | (1 << scsParser.T__39) | (1 << scsParser.T__40) | (1 << scsParser.T__41) | (1 << scsParser.T__42) | (1 << scsParser.T__43) | (1 << scsParser.T__44) | (1 << scsParser.T__45) | (1 << scsParser.T__46) | (1 << scsParser.T__47) | (1 << scsParser.T__48) | (1 << scsParser.T__49) | (1 << scsParser.T__50) | (1 << scsParser.T__51) | (1 << scsParser.T__52) | (1 << scsParser.T__53) | (1 << scsParser.T__54) | (1 << scsParser.T__55))) != 0)):
                    break

            self.state = 122
            self.match(scsParser.T__14)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentence_lvl1Context(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idtf_lvl1(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Idtf_lvl1Context)
            else:
                return self.getTypedRuleContext(scsParser.Idtf_lvl1Context,i)


        def getRuleIndex(self):
            return scsParser.RULE_sentence_lvl1




    def sentence_lvl1(self):

        localctx = scsParser.Sentence_lvl1Context(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_sentence_lvl1)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 124
            self.idtf_lvl1()
            self.state = 125
            self.match(scsParser.T__15)
            self.state = 126
            self.idtf_lvl1()
            self.state = 127
            self.match(scsParser.T__15)
            self.state = 128
            self.idtf_lvl1()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentence_lvl_4_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def connector(self):
            return self.getTypedRuleContext(scsParser.ConnectorContext,0)


        def idtf_list(self):
            return self.getTypedRuleContext(scsParser.Idtf_listContext,0)


        def attr_list(self):
            return self.getTypedRuleContext(scsParser.Attr_listContext,0)


        def getRuleIndex(self):
            return scsParser.RULE_sentence_lvl_4_list




    def sentence_lvl_4_list(self):

        localctx = scsParser.Sentence_lvl_4_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_sentence_lvl_4_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.connector()
            self.state = 132
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 131
                self.attr_list()


            self.state = 134
            self.idtf_list()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sentence_lvl_commonContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def idtf_common(self):
            return self.getTypedRuleContext(scsParser.Idtf_commonContext,0)


        def sentence_lvl_4_list(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(scsParser.Sentence_lvl_4_listContext)
            else:
                return self.getTypedRuleContext(scsParser.Sentence_lvl_4_listContext,i)


        def getRuleIndex(self):
            return scsParser.RULE_sentence_lvl_common




    def sentence_lvl_common(self):

        localctx = scsParser.Sentence_lvl_commonContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_sentence_lvl_common)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.idtf_common()
            self.state = 137
            self.sentence_lvl_4_list()
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==scsParser.T__11:
                self.state = 138
                self.match(scsParser.T__11)
                self.state = 139
                self.sentence_lvl_4_list()
                self.state = 144
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Attr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID_SYSTEM(self, i:int=None):
            if i is None:
                return self.getTokens(scsParser.ID_SYSTEM)
            else:
                return self.getToken(scsParser.ID_SYSTEM, i)

        def EDGE_ATTR(self, i:int=None):
            if i is None:
                return self.getTokens(scsParser.EDGE_ATTR)
            else:
                return self.getToken(scsParser.EDGE_ATTR, i)

        def getRuleIndex(self):
            return scsParser.RULE_attr_list




    def attr_list(self):

        localctx = scsParser.Attr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_attr_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 147 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 145
                    self.match(scsParser.ID_SYSTEM)
                    self.state = 146
                    self.match(scsParser.EDGE_ATTR)

                else:
                    raise NoViableAltException(self)
                self.state = 149 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConnectorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return scsParser.RULE_connector




    def connector(self):
